--- a/mi-app/src/pages/RegisterPatient.css
+++ b/mi-app/src/pages/RegisterPatient.css
@@ -2,11 +2,12 @@
 .register-patient-container {
   background: url('../assets/images/fondo.png') no-repeat center center/cover;
   height: 100vh;
-  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
+  z-index: 1;
 }
 
 /* Overlay para suavizar el fondo */
