--- a/mi-app/src/pages/ConfigurarTest.css
+++ b/mi-app/src/pages/ConfigurarTest.css
@@ -19,7 +19,7 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.3);
-  z-index: 1;
+  z-index: -1;
 }
 
 /* Aseguramos que el contenido del contenedor quede por encima del overlay */
@@ -154,7 +154,7 @@
   white-space: nowrap;
   position: relative;
   transition: 0.4s ease-in-out;
-  color: #ff69b4; /* Letras en rosa */
+  color: #ff69b4;
 }
 
 .radio-item label:after,
