--- a/mi-app/src/pages/MainPage.css
+++ b/mi-app/src/pages/MainPage.css
@@ -95,6 +95,20 @@
   margin-top: 10px;
 }
 
+.login-btn-cancelar {
+  background: linear-gradient(135deg, #9e9e9e, #bdbdbd);
+  color: #fff;
+  font-size: 18px;
+  border: none;
+  border-radius: 30px;
+  padding: 10px 20px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  width: 100%;
+  margin-top: 10px;
+}
+
+
 .login-btn:hover {
   background: linear-gradient(135deg, #fad0c4, #ff9a9e);
   transform: scale(1.05);
