--- a/mi-app/src/pages/TestPage.css
+++ b/mi-app/src/pages/TestPage.css
@@ -57,3 +57,13 @@
   font-size: 1.2em;
   color: #ff69b4;
 }
+
+.preview-container {
+  text-align: center;
+}
+
+.countdown {
+  font-size: 2rem;
+  font-weight: bold;
+  margin-top: 1rem;
+}
